fix: align style between breadcrumbs header and filter

--- a/src/app/issues/issue-detail/event-detail/entry-breadcrumbs/entry-breadcrumbs.component.scss
+++ b/src/app/issues/issue-detail/event-detail/entry-breadcrumbs/entry-breadcrumbs.component.scss
@@ -7,12 +7,11 @@
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 8px;
-
+  margin-top: 32px;
+  margin-bottom: 12px;
   h3 {
-    padding-top: 32px;
-    margin-bottom: 8px;
+    margin: 0;
   }
-
   mat-form-field {
     min-width: 200px;
   }
